<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1"
              android:layout_margin="25dp"
>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
    >
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_stile"
                    android:id="@+id/txt_stile" android:layout_column="0" android:layout_margin="2dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="17dp" android:textAlignment="gravity"/>
            <Spinner
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spin_style" android:layout_column="1" android:layout_margin="2dp"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_clima"
                    android:id="@+id/txt_clima" android:layout_column="0" android:layout_margin="2dp"
                    android:layout_marginLeft="10dp" android:textSize="17dp" android:textAlignment="gravity"/>
            <Spinner
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spin_climate" android:layout_column="1" android:layout_margin="2dp"
            />
        </TableRow>
    </TableLayout>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
            android:layout_weight="0.08">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_borsa"
                    android:id="@+id/chk_borsa" android:layout_column="0"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="10dp" android:textSize="17dp" android:textAlignment="gravity"
                    android:checked="false"/>
            <Spinner
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spin_tipoBorsa"
                    android:layout_column="1"
                    android:layout_margin="2dp"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_giacca"
                    android:id="@+id/chk_giacca"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="10dp" android:textSize="17dp" android:textAlignment="gravity"
                    android:layout_column="0" android:checked="false"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_cappello"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="10dp" android:textSize="17dp" android:textAlignment="gravity"
                    android:id="@+id/chk_cappello" android:layout_column="0" android:checked="false"/>
        </TableRow>
    </TableLayout>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_newClothes"
            android:id="@+id/chk_newClothes"
            android:layout_marginTop="25dp"
            android:checked="false"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_recetlyUsed"
            android:id="@+id/chk_recentlyUsed" android:checked="false"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btt_scegli"
            android:id="@+id/btt_cerca" android:layout_gravity="right"/>
</LinearLayout>