<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="1"
              android:layout_gravity="center_vertical"
              android:gravity="center">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08" android:gravity="center">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btt_aggiungi"
                android:id="@+id/btt_aggiungi"
                android:layout_gravity="center"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btt_scegli"
                android:id="@+id/btt_scegli"
                android:layout_gravity="center"
        />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btt_guardaroba"
                android:id="@+id/btt_guardaroba"
                android:layout_gravity="center"
        />
    </LinearLayout>
</LinearLayout>

